--- a/style.css
+++ b/style.css
@@ -170,153 +170,799 @@ label,span,h2{
 }
 
 /* media section */
-@media only screen and (max-width: 412px){
+@media only screen and (max-width: 800px){
     html{
-        font-size: 55%;
+        font-size:55%;
     }
 
-    div.register{
-        width: 98%;
-        flex-basis: 100%;
-        margin-bottom: 50px auto;
+    header{
+        padding:1.5rem 1rem;
     }
 
-    form#register{
-        width: 77%;
-
+    section{
+        padding:1.5rem;
     }
 
-    input#name{
-        width: 77%;
-
-    }
-    input#Submit{
-        width: 60%;
-    }
-
-    div.all{
-        width: 390px;
-        margin: 100px auto 0px auto;
-    padding-top: 100px;
-    }
-
-    div.box{
-        background-color: rgba(0,0,0,0.5);
-        width: 100%;
-        font-size: 10px;
-        border-radius: 10px;
-        border: 1px solid rgba(255,255,255,0.3);
-        box-shadow: 2px 2px 15px rgba(0,0,0,0.3);
-        color: #fff;
-        text-align: center;
-    }
-
-    #thank{
-
-        padding-top: 20px;
-        text-align: center;
-        font-size: 100%;
-        text-transform: capitalize;
-        width: 100%;
-        font-family: bold;
-    }
-
-    #info{
-        text-align: center;
-        font-size: 100%;
-        width: 100%;
-    }
-
-    .back-page{
-        padding-bottom: 20px;
-        text-align: center;
-        font-size: 100%;
-        cursor: pointer;
-        width: 100%;
-    }
     
-    .back-page a:hover{
-        align-items: center;
-        color: #fff;
-        padding: 7px 7px;
-        border: none;
-        border-radius: 3px;
-        background-color: black;
-    }
+    
+div.main{
+    flex-direction: column-reverse;
+    
+    padding-left: 25px;
+    padding-right: 25px;
+    
+    
+}
+  
+div.register{
+    width: 100%;
+    flex-basis: 100%;
+    margin-bottom: 50px auto;
+    
+}
+form#register{
+    width: 77%;
+}
+input#name{
+    width: 77%;
+}
+
+input#email{
+ width: 77%;
+}
+
+input#submit{
+    width: 60%;
+}
+
+div.all{
+    width: 550px;
+    
+   margin: 100px auto 0px auto;
+   padding-top: 300px;
+   
+   }
+
+
+div.box{
+    background-color: rgba(0,0,0,0.5);
+   width: 100%;
+    font-size: 10px;
+    border-radius: 10px;
+    border: 1px soid rgba(255,255,255,0.3);
+    box-shadow: 2px 2px 15px rgba(0,0,0,0.3);
+    color: #fff;
+    text-align: center;
+
 }
 
 
-@media only screen and (max-width: 290px){
+
+#thank{
+
+padding-top: 20px;
+text-align: center;
+font-size: 300%;
+text-transform: capitalize;
+width: 100%;
+font-family: bold;
+
+}
+#info{
+
+/* padding-top: 10px; */
+text-align: center;
+font-size: 200%;
+
+width: 100%;
+}
+.back-page{
+/* padding-top: 20px; */
+padding-bottom: 20px;
+text-align: center;
+font-size: 200%;
+cursor: pointer;
+width: 100%;
+
+}
+
+.back-page a:hover{
+align-items: center;
+color:white;
+padding: 7px 7px;
+border: none;
+    border-radius: 3px;
+    background-color: black;
+}
+
+}
+
+@media only screen and (max-width: 700px){
     html{
-        font-size: 55%;
+        font-size:55%;
     }
 
-    div.register{
-        width: 98%;
-        flex-basis: 100%;
-        margin-bottom: 50px auto;
+    header{
+        padding:1.5rem 1rem;
     }
 
-    form#register{
-        width: 77%;
-
-    }
-
-    input#name{
-        width: 77%;
-
-    }
-    input#Submit{
-        width: 60%;
-    }
-
-    div.all{
-        width: 390px;
-        margin: 100px auto 0px auto;
-    padding-top: 100px;
-    }
-
-    div.box{
-        background-color: rgba(0,0,0,0.5);
-        width: 100%;
-        font-size: 10px;
-        border-radius: 10px;
-        border: 1px solid rgba(255,255,255,0.3);
-        box-shadow: 2px 2px 15px rgba(0,0,0,0.3);
-        color: #fff;
-        text-align: center;
-    }
-
-    #thank{
-
-        padding-top: 20px;
-        text-align: center;
-        font-size: 300%;
-        text-transform: capitalize;
-        width: 100%;
-        font-family: bold;
-    }
-
-    #info{
-        text-align: center;
-        font-size: 200%;
-        width: 100%;
-    }
-
-    .back-page{
-        padding-bottom: 20px;
-        text-align: center;
-        font-size: 200%;
-        cursor: pointer;
-        width: 100%;
+    section{
+        padding:1.5rem;
     }
     
-    .back-page a:hover{
-        align-items: center;
-        color: #fff;
-        padding: 7px 7px;
-        border: none;
-        border-radius: 3px;
-        background-color: black;
+    header .icons #menu-bars{
+        display: inline-block;
     }
+
+    header .navbar{
+        position: absolute;
+        left:0; right:0; top:100%;
+        background:#f7f7f7;
+        border-top: .1rem solid #333;
+        border-bottom: .1rem solid #333;
+        transition: .2s linear;
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+
+       header .navbar.active{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    }
+
+    header .navbar a{
+        display: block;
+        padding:1.5rem;
+        margin:1.5rem;
+        background:#fff;
+        border:.1rem solid #333;
+        box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+        border-radius: .5rem;
+    }
+   
+div.main{
+    flex-direction: column-reverse;
+    padding-left: 25px;
+    padding-right: 25px;
+  
+    
+}
+div.register{
+    width: 100%;
+    flex-basis: 100%;
+    margin-bottom: 50px auto;
+    
+}
+form#register{
+    width: 77%;
+}
+input#name{
+    width: 77%;
+}
+}
+
+@media only screen and (max-width: 570px){
+    html{
+        font-size:55%;
+    }
+
+    header{
+        padding:1.5rem 1rem;
+    }
+
+    section{
+        padding:1.5rem;
+    }
+    
+    header .icons #menu-bars{
+        display: inline-block;
+    }
+
+    header .navbar{
+        position: absolute;
+        left:0; right:0; top:100%;
+        background:#f7f7f7;
+        border-top: .1rem solid #333;
+        border-bottom: .1rem solid #333;
+        transition: .2s linear;
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+   
+div.register{
+    width: 98%;
+    flex-basis: 100%;
+    margin-bottom: 50px auto;   
+}
+form#register{
+    width: 77%;
+}
+input#name{
+    width: 77%;
+}
+input#submit{
+    width: 60%;
+}
+
+div.all{
+    width: 500px;
+    
+   margin: 100px auto 0px auto;
+   padding-top: 200px;
+   
+   }
+
+
+div.box{
+    background-color: rgba(0,0,0,0.5);
+   width: 100%;
+    font-size: 10px;
+    border-radius: 10px;
+    border: 1px soid rgba(255,255,255,0.3);
+    box-shadow: 2px 2px 15px rgba(0,0,0,0.3);
+    color: #fff;
+    text-align: center;
+
+}
+
+
+
+#thank{
+
+padding-top: 20px;
+text-align: center;
+font-size: 300%;
+text-transform: capitalize;
+width: 100%;
+font-family: bold;
+
+}
+#info{
+
+/* padding-top: 10px; */
+text-align: center;
+font-size: 200%;
+
+width: 100%;
+}
+.back-page{
+/* padding-top: 20px; */
+padding-bottom: 20px;
+text-align: center;
+font-size: 200%;
+cursor: pointer;
+width: 100%;
+
+}
+
+.back-page a:hover{
+align-items: center;
+color:white;
+padding: 7px 7px;
+border: none;
+    border-radius: 3px;
+    background-color: black;
+}
+
+}
+
+
+
+@media only screen and (max-width: 500px){
+    html{
+        font-size:55%;
+    }
+
+    header{
+        padding:1.5rem 1rem;
+    }
+
+    section{
+        padding:1.5rem;
+    }
+    
+    header .icons #menu-bars{
+        display: inline-block;
+    }
+
+    header .navbar{
+        position: absolute;
+        left:0; right:0; top:100%;
+        background:#f7f7f7;
+        border-top: .1rem solid #333;
+        border-bottom: .1rem solid #333;
+        transition: .2s linear;
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+   
+div.register{
+    width: 98%;
+    flex-basis: 100%;
+    margin-bottom: 50px auto;   
+}
+form#register{
+    width: 77%;
+}
+input#name{
+    width: 77%;
+}
+input#submit{
+    width: 60%;
+}
+
+div.all{
+    width: 450px;
+    
+   margin: 100px auto 0px auto;
+   padding-top: 100px;
+   
+   }
+
+
+div.box{
+    background-color: rgba(0,0,0,0.5);
+   width: 100%;
+    font-size: 10px;
+    border-radius: 10px;
+    border: 1px soid rgba(255,255,255,0.3);
+    box-shadow: 2px 2px 15px rgba(0,0,0,0.3);
+    color: #fff;
+    text-align: center;
+
+}
+
+
+
+#thank{
+
+padding-top: 20px;
+padding-left: 5%;
+padding-right: 5%;
+text-align: center;
+font-size: 300%;
+text-transform: capitalize;
+width: 100%;
+font-family: bold;
+
+}
+#info{
+
+padding-top: 10px;
+text-align: center;
+font-size: 200%;
+width: 100%;
+}
+.back-page{
+
+padding-bottom: 20px;
+text-align: center;
+font-size: 200%;
+cursor: pointer;
+width: 100%;
+
+}
+
+.back-page a:hover{
+align-items: center;
+color:white;
+padding: 7px 7px;
+border: none;
+    border-radius: 3px;
+    background-color: black;
+}
+
+}
+
+@media only screen and (max-width: 414px){
+html{
+    font-size:55%;
+}
+
+header{
+    padding:1.5rem 1rem;
+}
+
+section{
+    padding:1.5rem;
+}
+
+header .icons #menu-bars{
+    display: inline-block;
+}
+
+header .navbar{
+    position: absolute;
+    left:0; right:0; top:100%;
+    background:#f7f7f7;
+    border-top: .1rem solid #333;
+    border-bottom: .1rem solid #333;
+    transition: .2s linear;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+}
+
+div.register{
+width: 98%;
+flex-basis: 100%;
+margin-bottom: 50px auto;   
+}
+form#register{
+width: 77%;
+}
+input#name{
+width: 77%;
+}
+input#submit{
+width: 60%;
+}
+
+div.all{
+width: 350px;
+
+margin: 100px auto 0px auto;
+padding-top: 100px;
+
+}
+
+
+div.box{
+background-color: rgba(0,0,0,0.5);
+width: 100%;
+font-size: 10px;
+border-radius: 10px;
+border: 1px soid rgba(255,255,255,0.3);
+box-shadow: 2px 2px 15px rgba(0,0,0,0.3);
+color: #fff;
+text-align: center;
+
+}
+
+
+
+#thank{
+
+padding-top: 20px;
+text-align: center;
+font-size: 300%;
+text-transform: capitalize;
+width: 100%;
+font-family: bold;
+
+}
+#info{
+
+/* padding-top: 10px; */
+text-align: center;
+font-size: 200%;
+
+width: 100%;
+}
+.back-page{
+/* padding-top: 20px; */
+padding-bottom: 20px;
+text-align: center;
+font-size: 200%;
+cursor: pointer;
+width: 100%;
+
+}
+
+.back-page a:hover{
+align-items: center;
+color:white;
+padding: 7px 7px;
+border: none;
+border-radius: 3px;
+background-color: black;
+}
+
+}
+
+
+@media only screen and (max-width: 412px){
+html{
+    font-size:55%;
+}
+
+header{
+    padding:1.5rem 1rem;
+}
+
+section{
+    padding:1.5rem;
+}
+
+header .icons #menu-bars{
+    display: inline-block;
+}
+
+header .navbar{
+    position: absolute;
+    left:0; right:0; top:100%;
+    background:#f7f7f7;
+    border-top: .1rem solid #333;
+    border-bottom: .1rem solid #333;
+    transition: .2s linear;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+}
+
+div.register{
+width: 98%;
+flex-basis: 100%;
+margin-bottom: 50px auto;   
+}
+form#register{
+width: 77%;
+}
+input#name{
+width: 77%;
+}
+input#submit{
+width: 60%;
+}
+
+div.all{
+width: 390px;
+
+margin: 100px auto 0px auto;
+padding-top: 100px;
+
+}
+
+
+div.box{
+background-color: rgba(0,0,0,0.5);
+width: 100%;
+font-size: 10px;
+border-radius: 10px;
+border: 1px soid rgba(255,255,255,0.3);
+box-shadow: 2px 2px 15px rgba(0,0,0,0.3);
+color: #fff;
+text-align: center;
+
+}
+
+
+
+#thank{
+
+padding-top: 20px;
+text-align: center;
+font-size: 300%;
+text-transform: capitalize;
+width: 100%;
+font-family: bold;
+
+}
+#info{
+
+/* padding-top: 10px; */
+text-align: center;
+font-size: 200%;
+width: 100%;
+}
+.back-page{
+/* padding-top: 20px; */
+padding-bottom: 20px;
+text-align: center;
+font-size: 200%;
+cursor: pointer;
+width: 100%;
+
+}
+
+.back-page a:hover{
+align-items: center;
+color:white;
+padding: 7px 7px;
+border: none;
+border-radius: 3px;
+background-color: black;
+}
+
+}
+
+
+@media only screen and (max-width: 400px){
+html{
+    font-size:55%;
+}
+
+header{
+    padding:1.5rem 1rem;
+}
+
+section{
+    padding:1.5rem;
+}
+
+header .icons #menu-bars{
+    display: inline-block;
+}
+
+header .navbar{
+    position: absolute;
+    left:0; right:0; top:100%;
+    background:#f7f7f7;
+    border-top: .1rem solid #333;
+    border-bottom: .1rem solid #333;
+    transition: .2s linear;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+}
+
+div.register{
+width: 98%;
+flex-basis: 100%;
+margin-bottom: 50px auto;   
+}
+form#register{
+width: 77%;
+}
+input#name{
+width: 77%;
+}
+input#submit{
+width: 60%;
+}
+
+div.all{
+width: 300px;
+
+margin: 100px auto 0px auto;
+padding-top: 100px;
+
+}
+
+
+div.box{
+background-color: rgba(0,0,0,0.5);
+width: 100%;
+font-size: 10px;
+border-radius: 10px;
+border: 1px soid rgba(255,255,255,0.3);
+box-shadow: 2px 2px 15px rgba(0,0,0,0.3);
+color: #fff;
+text-align: center;
+
+}
+
+
+
+#thank{
+
+padding-top: 20px;
+text-align: center;
+font-size: 300%;
+text-transform: capitalize;
+width: 100%;
+font-family: bold;
+
+}
+#info{
+
+/* padding-top: 10px; */
+text-align: center;
+font-size: 200%;
+
+width: 100%;
+}
+.back-page{
+/* padding-top: 20px; */
+padding-bottom: 20px;
+text-align: center;
+font-size: 200%;
+cursor: pointer;
+width: 100%;
+
+}
+
+.back-page a:hover{
+align-items: center;
+color:white;
+padding: 7px 7px;
+border: none;
+border-radius: 3px;
+background-color: black;
+}
+
+}
+
+@media only screen and (max-width: 290px){
+html{
+    font-size:55%;
+}
+
+header{
+    padding:1.5rem 1rem;
+}
+
+section{
+    padding:1.5rem;
+}
+
+header .icons #menu-bars{
+    display: inline-block;
+}
+
+header .navbar{
+    position: absolute;
+    left:0; right:0; top:100%;
+    background:#f7f7f7;
+    border-top: .1rem solid #333;
+    border-bottom: .1rem solid #333;
+    transition: .2s linear;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+}
+
+div.register{
+width: 98%;
+flex-basis: 100%;
+margin-bottom: 50px auto;   
+}
+form#register{
+width: 77%;
+}
+input#name{
+width: 77%;
+}
+input#submit{
+width: 60%;
+}
+
+div.all{
+width: 250px;
+
+margin: 100px auto 0px auto;
+padding-top: 100px;
+
+}
+
+
+div.box{
+background-color: rgba(0,0,0,0.5);
+width: 100%;
+font-size: 10px;
+border-radius: 10px;
+border: 1px soid rgba(255,255,255,0.3);
+box-shadow: 2px 2px 15px rgba(0,0,0,0.3);
+color: #fff;
+text-align: center;
+
+}
+
+
+
+#thank{
+
+padding-top: 20px;
+text-align: center;
+font-size: 300%;
+text-transform: capitalize;
+width: 100%;
+font-family: bold;
+
+}
+#info{
+
+/* padding-top: 10px; */
+text-align: center;
+font-size: 200%;
+
+width: 100%;
+}
+.back-page{
+/* padding-top: 20px; */
+padding-bottom: 20px;
+text-align: center;
+font-size: 200%;
+cursor: pointer;
+width: 100%;
+
+}
+
+.back-page a:hover{
+align-items: center;
+color:white;
+padding: 7px 7px;
+border: none;
+border-radius: 3px;
+background-color: black;
+}
+
 }
