--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html{
     font-size: 62.5%;
     overflow: hidden;
     scroll-behavior: smooth;
-    scroll-padding-top: none;
+    /* scroll-padding-top: none; */
 }
 
 body{
